# ref-eRp-FD-Server

./: Cargo.toml  LICENSE  README.adoc  README.md  ReleaseNotes.md  dependencies.json
server/: .gitattributes  Cargo.toml  build.rs  log4rs.yml
server/examples/: TSL.xml  audit_event.json  audit_event.xml  capability_statement_both.json  capability_statement_both.xml  capability_statement_patient.json  capability_statement_supplier.json  capability_statement_supplier.xml  claims_apotheke.json  claims_arzt.json  claims_patient.json  cms.base64  cms.pem  cms_github_issue_12.pem  communication_dispense_req.json  communication_dispense_req.xml  communication_info_req.json  communication_info_req.xml  communication_reply.json  communication_reply.xml  composition.json  composition.xml  coverage.json  coverage.xml  device.json  device.xml  erx_bundle.json  erx_bundle.xml  erx_composition.json  erx_composition.xml  kbv_bundle.json  kbv_bundle.xml  kbv_bundle_github_issue_12.xml  medication_compounding.json  medication_compounding.xml  medication_dispense.json  medication_dispense.xml  medication_free_text.json  medication_free_text.xml  medication_ingredient.json  (+43 more)
server/src/: error.rs  lib.rs  logging.rs  macros.rs  main.rs  misc.rs  tsl.rs
server/src/asn1/: mod.rs
server/src/asn1/de/: deserializer.rs  enums.rs  error.rs  mod.rs  sequences.rs  values.rs
server/src/asn1/definitions/: mod.rs  signed_data.rs
server/src/asn1/types/: bit_string.rs  mod.rs  object_identifier.rs  octet_string.rs  printable_string.rs  sequence.rs  set.rs  utf8_string.rs
server/src/fhir/: constants.rs  format.rs  mod.rs
server/src/fhir/decode/: byte_stream.rs  decode_stream.rs  item_stream.rs  mod.rs  reader_stream.rs  traits.rs
server/src/fhir/decode/json/: decoder.rs  error.rs  mod.rs  reader.rs
server/src/fhir/decode/xml/: decoder.rs  error.rs  mod.rs  reader.rs
server/src/fhir/definitions/: audit_event.rs  bundle.rs  capability_statement.rs  communication.rs  composition.rs  coverage.rs  device.rs  erx_bundle.rs  erx_composition.rs  kbv_bundle.rs  medication.rs  medication_dispense.rs  medication_request.rs  meta.rs  mod.rs  operation_outcome.rs  organization.rs  patient.rs  practitioner.rs  practitioner_role.rs  signature.rs  task.rs  task_activate_parameters.rs  task_create_parameters.rs  types.rs
server/src/fhir/definitions/misc/: address.rs  code.rs  cow.rs  insurance_id.rs  kvnr.rs  mod.rs  name.rs  participant_id.rs  prescription_id.rs  telematik_id.rs
server/src/fhir/definitions/primitives/: amount.rs  binary.rs  code.rs  codeable_concept.rs  coding.rs  date.rs  date_time.rs  id.rs  identifier.rs  instant.rs  mod.rs  reference.rs
server/src/fhir/encode/: byte_stream.rs  encode_stream.rs  item.rs  mod.rs  traits.rs
server/src/fhir/encode/json/: encoder.rs  error.rs  mod.rs  writer.rs
server/src/fhir/encode/xml/: encoder.rs  error.rs  mod.rs  writer.rs
server/src/fhir/json/: mod.rs
server/src/fhir/json/definitions/: bundle.rs  capability_statement.rs  communication.rs  composition.rs  coverage.rs  kbv_bundle.rs  medication.rs  medication_request.rs  mod.rs  organization.rs  patient.rs  practitioner.rs  practitioner_role.rs
server/src/fhir/json/definitions/misc/: address.rs  binary.rs  codable_concept.rs  coding.rs  contact_point.rs  extension.rs  identifier.rs  meta.rs  mod.rs  name.rs  parameters.rs  quantity.rs  ratio.rs  reference.rs  root.rs  value.rs
server/src/fhir/json/definitions/primitives/: date.rs  (+3 more)
server/src/fhir/json/ser/: formatter.rs  mod.rs
server/src/fhir/security/: json.rs  mod.rs  signed.rs
server/src/fhir/xml/: mod.rs
server/src/fhir/xml/de/: deserializer.rs  enums.rs  maps.rs  mod.rs  sequences.rs  values.rs
server/src/fhir/xml/definitions/: bundle.rs  capability_statement.rs  communication.rs  composition.rs  coverage.rs  kbv_bundle.rs  medication.rs  medication_request.rs  mod.rs  organization.rs  patient.rs  practitioner.rs  practitioner_role.rs
server/src/fhir/xml/ser/: maps.rs  mod.rs  sequences.rs  serializer.rs  structs.rs  values.rs
server/src/pki_store/: admission.rs  cert_list.rs  error.rs  misc.rs  mod.rs  ocsp_list.rs  ocsp_vau.rs
server/src/pki_store/puk_token/: from_file.rs  from_web.rs  mod.rs
server/src/pki_store/tsl/: extract.rs  mod.rs  update.rs
server/src/service/: constants.rs  error.rs  header.rs  idp_client.rs  mod.rs  state.rs
server/src/service/header/: accept.rs  accept_language.rs  authorization.rs  content_type.rs  mod.rs  x_access_code.rs
server/src/service/middleware/: access_log.rs  charset_utf8.rs  extract_access_token.rs  header_check.rs  logging.rs  mod.rs  req_res_log.rs  vau.rs
server/src/service/misc/: access_token.rs  cms.rs  data_type.rs  from_query.rs  history.rs  json.rs  logging.rs  mod.rs  puk_token.rs  search.rs  sort.rs  xml.rs
server/src/service/misc/search/: audit_event.rs  date_time.rs  mod.rs  option.rs  string.rs  task_status.rs  telematik_id.rs
server/src/service/routes/: capabilty_statement.rs  cert_list.rs  health.rs  mod.rs  ocsp_list.rs  random.rs  tsl.rs
server/src/service/routes/audit_event/: error.rs  get.rs  mod.rs  state.rs
server/src/service/routes/communication/: create.rs  delete.rs  error.rs  get.rs  misc.rs  mod.rs  state.rs
server/src/service/routes/device/: get.rs  mod.rs
server/src/service/routes/medication_dispense/: error.rs  get.rs  mod.rs  state.rs
server/src/service/routes/misc/: json.rs  mod.rs  xml.rs
server/src/service/routes/task/: abort.rs  accept.rs  activate.rs  close.rs  create.rs  error.rs  get.rs  misc.rs  mod.rs  reject.rs  state.rs
server/src/state/: e_prescriptions.rs  erx_receipts.rs  history.rs  mod.rs  patient_receipts.rs  persist.rs  timeouts.rs
server/src/tasks/: misc.rs  mod.rs
server/src/tasks/puk_token/: error.rs  from_file.rs  from_web.rs  mod.rs
server/src/tasks/tsl/: certs.rs  error.rs  extract.rs  mod.rs  update.rs
server/src/tsl/: extract.rs  mod.rs  update.rs
vau/: Cargo.toml
vau/src/: decode.rs  decrypt.rs  encode.rs  encrypt.rs  error.rs  lib.rs  misc.rs  priority_future.rs  user_pseudonym.rs
(+117 files in other folders)
