[workspace]
members = [
    "libxml",
    "libxml-sys",
    "miscellaneous",
    "proc-macros",
    "resources",
    "server",
    "tool",
    "vau",
    "xmlsec",
]
default-members = [
    "server"
]

[patch.crates-io]
actix-web = { git = "https://github.com/Gematik-Entwicklung/actix-web.git", rev = "393813870e0342f9f9fb6818db90c8f8b6767f84" }
libxml = { path = "./libxml" }
libxml-sys = { path = "./libxml-sys" }
miscellaneous = { path = "./miscellaneous" }
openssl = { git = "https://github.com/Gematik-Entwicklung/rust-openssl.git", rev = "5962a62edc1ee3b606a5761ba6b89d415cdb6952" }
openssl-sys = { git = "https://github.com/Gematik-Entwicklung/rust-openssl.git", rev = "5962a62edc1ee3b606a5761ba6b89d415cdb6952" }
proc-macros = { path = "./proc-macros" }
resources = { path = "./resources" }
vau = { path = "./vau" }
xmlsec = { path = "./xmlsec" }
