[workspace]
members = [
    "libxml",
    "libxml-sys",
    "miscellaneous",
    "proc-macros",
    "resources",
    "server",
    "tool",
    "vau",
    "xmlsec",
]
default-members = [
    "server"
]

[patch.crates-io]
actix-web = { git = "https://github.com/Gematik-Entwicklung/actix-web.git", rev = "393813870e0342f9f9fb6818db90c8f8b6767f84" }
libxml = { path = "./libxml" }
libxml-sys = { path = "./libxml-sys" }
miscellaneous = { path = "./miscellaneous" }
openssl = { git = "https://github.com/Gematik-Entwicklung/rust-openssl.git", rev = "5e02c5f204e77c0421f18a6dee8352a088cc5e3f" }
openssl-sys = { git = "https://github.com/Gematik-Entwicklung/rust-openssl.git", rev = "5e02c5f204e77c0421f18a6dee8352a088cc5e3f" }
proc-macros = { path = "./proc-macros" }
resources = { path = "./resources" }
vau = { path = "./vau" }
xmlsec = { path = "./xmlsec" }
